<resources>
    <string name="app_name">MyApplication</string>
    <string name="hello_world">Hello World!</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username1">Username:</string>
    <string name="password1">Password:</string>
    <string name="email">Email:</string>
    <string name="welcome">WELCOME</string>
    <string name="new_list">NEW LIST</string>
    <string name="see_my_list">SEE MY LIST</string>
    <string name="naslov_liste">Naslov liste</string>
    <string name="ok">OK</string>
    <string name="naslov">NASLOV</string>
    <string name="share_list">Share list:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="naslovN">Naslov:</string>
    <string name="shared">Shared:</string>
    <string name="naslovi">naslovI</string>
    <string name="status">status</string>
    <string name="add">ADD</string>
    <string name="home">HOME</string>
    <string name="refresh">REFRESH</string>
    <string name="see_shared_lists">SEE SHARED LISTS</string>
</resources>