<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowListActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naslovi"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/show_list_task_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/show_list_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/add" />

        <Button
            android:id="@+id/show_list_refresh_button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:visibility="gone"/>

    </LinearLayout>

    <ListView
        android:id="@+id/show_list_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="bottom|center"
        android:id="@+id/show_list_home_button"/>

</LinearLayout>